--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ pydantic==2.8.2
 requests==2.32.3
 python-dotenv==1.0.1
 pandas==2.2.2
+numpy==1.26.4
 streamlit==1.51.0
+matplotlib==3.8.2
+plotly==5.22.0
